Created a portfolio page

--- a/index.html
+++ b/index.html
@@ -2,34 +2,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<title> Responsive Navigation </title> <!-- what I called my website title -->
-	<script src="modernizr-1.5.js"></script>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+  <head>
+	   <title> Responsive Navigation </title> <!-- what I called my website title -->
+	    <script src="modernizr-1.5.js"></script>
+	     <meta charset="utf-8" />
+	      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-	<link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
+	       <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
 
-</head>
-
-
-<body> <!-- the body of my website -->
+  </head>
 
 
-		<div class="header">
+  <body> <!-- the body of my website -->
+
+    <div class="header">
 				<h1> <img src="images/mypic.jpg" alt="Essex header" width="300" height="150" id="HeaderIMG pic"  /> </h1>	<!-- This is how I styled my picture in my header -->
-
-		</div>
-
-
+    </div>
 
 
 <label for="show-menu" class="show-menu">MENU</label> <!-- this is how I created the drop down menu button -->
 <input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
 		<ul id="nav"> <!-- this is my navigation menu-->
-			<li><a href="internal1.html"> Educational Background </a></li>
-			<li><a href="internal2.html"> Technical Skills </a></li>
-			<li><a href="http://www.cisco.com/cisco/web/UK/index.html"> CISCO </a></li>
+			<li><a href="internal1.html"> Portfolio </a></li>
+			<li><a href="internal2.html"> Technical Experience </a></li>
+			<li><a href="http://www.cisco.com/cisco/web/UK/index.html"> Contact </a></li>
 			<li><a href="http://www.w3schools.com/"> w3Schools </a></li>
 			<li><a href="https://www.codecademy.com/"> Code Academy </a></li>
 		</ul>
@@ -37,29 +33,31 @@
 
 
 	<!-- this is how is section of the main body of my web page -->
-	<div class="section">
-	<section>
-		<h2 align="center">Matthew Tunwashe</h2>
+  <div class="section">
+	   <section>
+		     <h2 align="center">Matthew Tunwashe</h2>
 
-			<p> I'm a Bsc Information and Computer Technology student at the University of Essex with adequate experience as a website developer.
+			       <p> I'm a Bsc Information and Computer Technology student at the University of Essex with adequate experience as a website developer.
 			I'm passionate, innovative and goal driven. I've designed websites using sophisticated web applications such as Microsoft Technologies,
 			Java, HTML, CSS and JavaScript.
-			</p>
+			       </p>
 
-			<div id="nav-pic"> <!-- this is how I styled the picture in the main body of the web page -->
-			<img src="images/TRANSPARENT-creative-thinking-colourful-clogs-brain-1024x815.png" align="center" alt="Essex header" width="200" height="100" id="HeaderIMG pic"  /> </div>
+             <div id="nav-pic"> <!-- this is how I styled the picture in the main body of the web page -->
+			            <img src="images/TRANSPARENT-creative-thinking-colourful-clogs-brain-1024x815.png" align="center" alt="Essex header" width="200" height="100" id="HeaderIMG pic"  />
+            </div>
 
-			<p> I discovered my passion for studying Computer science in college when I studied Diploma B-TEC Information Communication Technology.
+			         <p> I discovered my passion for studying Computer science in college when I studied Diploma B-TEC Information Communication Technology.
 			I completed this course with a double D* grade. This developed my interest in Computing.
-			</p>
+			         </p>
 
 
 					</section>
-				</div>
-
-
-		</body>
+  </div>
 
 
 
-	</html>
+  </body>
+
+
+
+</html>
