--- a/technical-experience.html
+++ b/technical-experience.html
@@ -1,60 +1,52 @@
-<!-- Name: Matthew Tunwashe		Registration number:mtunwa1401696 -->
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<title> Responsive Navigation </title>
-	<script src="modernizr-1.5.js"></script>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+  <head>
+	   <title> Responsive Navigation </title> <!-- what I called my website title -->
+	    <script src="modernizr-1.5.js"></script>
+	     <meta charset="utf-8" />
+	      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+
+	       <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
+
+  </head>
 
 
-	<link rel="stylesheet" media="screen, projection" href="css/screen.css"> <!-- how I linked my html and css-->
+  <body> <!-- the body of my website -->
 
+    <div class="header">
+				<h1> <img src="images/matt.jpg" alt="my picture" width="300" height="150" id="HeaderIMG pic"  /> </h1>	<!-- This is how I styled my picture in my header -->
+    </div>
 
-
-</head>
-
-<body> <!-- the body of my website -->
-
-	<!--container -->
-
-
-		<div class="header">
-				<h1>  <img src="images/641px-Mad_scientist_transparent_background.svg.png" alt="Essex header" width="300" height="150" id="HeaderIMG pic"  /> <!-- This is how I styled my picture in my header -->
-				</h1>
-
-		</div>
 
 <label for="show-menu" class="show-menu">MENU</label> <!-- this is how I created the drop down menu button -->
 <input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
-		<ul id="nav">
-			<li><a href="index.html"> About me </a></li>
-			<li><a href="internal1.html"> Educational Background </a></li>
-			<li><a href="http://www.cisco.com/cisco/web/UK/index.html"> CISCO </a></li>
-			<li><a href="http://www.w3schools.com/"> w3Schools </a></li>
-			<li><a href="https://www.codecademy.com/"> Code Academy </a></li>
+		<ul id="nav"> <!-- this is my navigation menu-->
+
+			<li><a href="about-me.html"> About me </a></li>
+
 		</ul>
 
+
+
 	<!-- this is how is section of the main body of my web page -->
-	<div class="section">
-	<section>
-		<h2 align="center">Technical Skills</h2>
-			<p> The following including some of my achievements </p>
-			<p>	<li> Software Development: Java and Python<li>
-			<li> Web Development: HTML, CSS and JavaScript</li>
-			<li> Network Set-up and configuration</li>
-			<li> CISCO certificate</li>
+  <div class="section">
+    <section>
+  		<h2 align="center">Technical Skills</h2>
+  			<p> The following including some of my achievements </p>
+  			<li>Python</li>
+        <li>Java</li>
+  			<li> Web Development: HTML and CSS</li>
+        <p>
+
+
+      </section>
+  </div>
 
 
 
-					</section>
-				</div>
+  </body>
 
 
 
-
-		</body>
-
-
-	</html>
+</html>
