I edited the image in technical-experience page

--- a/technical-experience.html
+++ b/technical-experience.html
@@ -15,7 +15,7 @@
   <body> <!-- the body of my website -->
 
     <div class="header">
-				<h1> <img src="images/matt.jpg" alt="my picture" width="300" height="150" id="HeaderIMG pic"  /> </h1>	<!-- This is how I styled my picture in my header -->
+				<h1> <img src="images/mycv.png" alt="my picture" width="300" height="150" id="HeaderIMG pic"  /> </h1>	<!-- This is how I styled my picture in my header -->
     </div>
 
 
