I added more buttons to the menu

--- a/technical-experience.html
+++ b/technical-experience.html
@@ -24,6 +24,9 @@
 		<ul id="nav"> <!-- this is my navigation menu-->
 
 			<li><a href="about-me.html"> About me </a></li>
+      <li><a href="http://www.cisco.com/cisco/web/UK/index.html"> CISCO </a></li>
+      <li><a href="http://www.w3schools.com/"> w3Schools </a></li>
+      <li><a href="https://www.codecademy.com/"> Code Academy </a></li>
 
 		</ul>
 
