I deleted the technical-experience webpage. I also linked the technical and contact page so it does not open up a new page

--- a/about-me.html
+++ b/about-me.html
@@ -23,10 +23,8 @@
 <input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
 		<ul id="nav"> <!-- this is my navigation menu-->
 
-			<li><a href="technical-experience.html"> Technical Experience </a></li>
-      <li><a href="http://www.cisco.com/cisco/web/UK/index.html"> CISCO </a></li>
-      <li><a href="http://www.w3schools.com/"> w3Schools </a></li>
-      <li><a href="https://www.codecademy.com/"> Code Academy </a></li>
+			<li><a href="#technical-section"> Technical Experience </a></li>
+      <li><a href="#contact-section"> Contact Me </a></li>
 
 		</ul>
 
@@ -44,12 +42,46 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </br>
 			        </p>
 
 
 			</section>
   </div>
+
+
+  <div id="technical-section">
+    <section>
+  		<h2 align="center">Technical Skills</h2>
+  			<p> The following including some of my achievements </p>
+  			<li>Python</li>
+        <li>Java</li>
+  			<li> Web Development: HTML and CSS</li>
+        <p>
+
+
+      </section>
+
+  </div>
+
+  <div id="contact-section">
+    <section>
+  		<h2 align="center">Technical Skills</h2>
+  			<p> The following including some of my achievements </p>
+  			<li>Python</li>
+        <li>Java</li>
+  			<li> Web Development: HTML and CSS</li>
+        <p>
+
+
+      </section>
+
+  </div>
+
 
 
 
