--- a/about-me.html
+++ b/about-me.html
@@ -3,11 +3,13 @@
 
   <head>
 	   <title> Responsive Navigation </title> <!-- what I called my website title -->
-	    <script src="modernizr-1.5.js"></script>
-	     <meta charset="utf-8" />
-	      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-	       <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
+      <script src="modernizr-1.5.js"></script>
+
+	     <meta charset="utf-8" />
+	     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+
+	     <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
 
   </head>
 
@@ -15,18 +17,37 @@
   <body> <!-- the body of my website -->
 
     <div class="header">
-				<h1> <img src="images/matt.jpg" alt="my picture" width="300" height="150" id="HeaderIMG pic"  /> </h1>	<!-- This is how I styled my picture in my header -->
+
+				<h1>
+          <img src="images/matt.jpg" alt="my picture" width="350" height="450" id="HeaderIMG pic"  />
+        </h1>	<!-- This is how I styled my picture in my header -->
+
     </div>
 
 
-<label for="show-menu" class="show-menu">MENU</label> <!-- this is how I created the drop down menu button -->
-<input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
-		<ul id="nav"> <!-- this is my navigation menu-->
+<!-- <label for="show-menu" class="show-menu">MENU</label> <!-- this is how I created the drop down menu button -->
+<!-- <input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
+		<!-- <ul id="nav"> <!-- this is my navigation menu-->
 
-			<li><a href="#technical-section"> Technical Experience </a></li>
-      <li><a href="#contact-section"> Contact Me </a></li>
+			<!-- <li><a href="#technical-section"> Technical Experience </a></li>
+      <li><a href="#contact-section"> Contact Me </a></li> -->
 
-		</ul>
+		<!-- </ul> -->
+
+    <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
 
 
 
@@ -70,7 +91,7 @@
 
   <div id="contact-section">
     <section>
-  		<h2 align="center">Technical Skills</h2>
+  		<h2 align="center">Contact Me</h2>
   			<p> The following including some of my achievements </p>
   			<li>Python</li>
         <li>Java</li>
