--- a/about-me.html
+++ b/about-me.html
@@ -2,19 +2,24 @@
 <html lang="en">
 
   <head>
-	   <title> Responsive Navigation </title> <!-- what I called my website title -->
+	   <title> Matthew Tunwashe Portfolio </title> <!-- website title -->
 
       <script src="modernizr-1.5.js"></script>
 
-	     <meta charset="utf-8" />
-	     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+	       <meta charset="utf-8" />
+	       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-	     <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
+	        <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
+
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
+          </script>
 
   </head>
 
 
-  <body> <!-- the body of my website -->
+  <body>
 
     <div class="header">
 
@@ -25,49 +30,28 @@
     </div>
 
 
-<!-- <label for="show-menu" class="show-menu">MENU</label> <!-- this is how I created the drop down menu button -->
-<!-- <input type="checkbox" id="show-menu" role="button"> <!-- this is how I created the drop down menu button -->
-		<!-- <ul id="nav"> <!-- this is my navigation menu-->
-
-			<!-- <li><a href="#technical-section"> Technical Experience </a></li>
-      <li><a href="#contact-section"> Contact Me </a></li> -->
-
-		<!-- </ul> -->
-
     <ul class="nav justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#">Disabled</a>
-  </li>
-</ul>
 
+      <li class="nav-item">
+        <a class="nav-link active" href="#section">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#technical-section">Technical Skills</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact-section">Contact Me</a>
+      </li>
+    </ul>
 
 
 	<!-- this is how is section of the main body of my web page -->
-  <div class="section">
+  <div id="section">
 	   <section>
 		     <h2 align="center">About Me</h2>
 
-			       <p> I'm a Information and Computer Technology Bsc graduate from the University of Essex.
+			       <p> I'm an Information and Computer Technology Bsc graduate from the University of Essex.
 			I'm passionate, innovative and goal driven. I discovered my passion for studying Computer science in college when I studied Diploma B-TEC Information Communication Technology.
-			I completed this course with a double D* grade. This developed my interest in Computing.
-      <br>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </br>
+			I completed this course with a double D* grade. Ever since, this developed my interest in Computing. 
 			        </p>
 
 
@@ -80,12 +64,11 @@
   		<h2 align="center">Technical Skills</h2>
   			<p> The following including some of my achievements </p>
   			<li>Python</li>
-        <li>Java</li>
-  			<li> Web Development: HTML and CSS</li>
-        <p>
+  			<li>HTML</li>
+  			<li>CSS</li>
 
 
-      </section>
+    </section>
 
   </div>
 
@@ -93,9 +76,9 @@
     <section>
   		<h2 align="center">Contact Me</h2>
   			<p> The following including some of my achievements </p>
-  			<li>Python</li>
-        <li>Java</li>
-  			<li> Web Development: HTML and CSS</li>
+  			<li>Mobile number: 07428080160</li>
+        <li>Gmail: matthewtunwashe@gmail.com</li>
+  			<li>Hotmail:matthewtunwashe@hotmail.co.uk</li>
         <p>
 
 
