changes has being made as requested by Joe

--- a/about-me.html
+++ b/about-me.html
@@ -11,25 +11,26 @@
 
 	        <link rel="stylesheet" media="screen, projection" href="css/style.css"> <!-- how I linked my html and css-->
 
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+          <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
+          <script src="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous">
           </script>
-
   </head>
 
 
-  <body>
+<body>
+  <div class="container">
+
+
 
     <div class="header">
-
-				<h1>
+        <div class="mypic">
           <img src="images/matt.jpg" alt="my picture" width="350" height="450" id="HeaderIMG pic"  />
-        </h1>	<!-- This is how I styled my picture in my header -->
-
+        </div>
     </div>
 
 
+	<!-- this is how I styled the buttons using bootstrap  -->
     <ul class="nav justify-content-center">
 
       <li class="nav-item">
@@ -46,30 +47,23 @@
 
 	<!-- this is how is section of the main body of my web page -->
   <div id="section">
-	   <section>
-		     <h2 align="center">About Me</h2>
-
-			       <p> I'm an Information and Computer Technology Bsc graduate from the University of Essex.
+    <section>
+      <h2 align="center">About Me</h2>
+        <p> I'm an Information and Computer Technology Bsc graduate from the University of Essex.
 			I'm passionate, innovative and goal driven. I discovered my passion for studying Computer science in college when I studied Diploma B-TEC Information Communication Technology.
-			I completed this course with a double D* grade. Ever since, this developed my interest in Computing. 
-			        </p>
-
-
+			I completed this course with a double D* grade. Ever since, this developed my interest in Computing.
+			   </p>
 			</section>
   </div>
 
-
   <div id="technical-section">
     <section>
-  		<h2 align="center">Technical Skills</h2>
-  			<p> The following including some of my achievements </p>
+      <h2 align="center">Technical Skills</h2>
+        <p> The following including some of my achievements </p>
   			<li>Python</li>
   			<li>HTML</li>
   			<li>CSS</li>
-
-
     </section>
-
   </div>
 
   <div id="contact-section">
@@ -79,18 +73,10 @@
   			<li>Mobile number: 07428080160</li>
         <li>Gmail: matthewtunwashe@gmail.com</li>
   			<li>Hotmail:matthewtunwashe@hotmail.co.uk</li>
-        <p>
-
-
-      </section>
-
+    </section>
   </div>
 
-
-
-
+</div>
   </body>
-
-
 
 </html>
